--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.11.0",
     "react-toastify": "^9.1.2",
+    "react-tooltip": "^5.11.1",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
