--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "react-lazy-load": "^4.0.1",
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.11.0",
+    "react-to-pdf": "^0.0.14",
     "react-toastify": "^9.1.2",
     "react-tooltip": "^5.11.1",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "swiper": "^9.2.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
